# poolctl

./: README.md  pyproject.toml
poolctl/: main.py
poolctl/commands/: configure.py  create.py  destroy.py  power.py  resume.py  rollback.py  snapshot.py  start.py  status.py  stop.py  suspend.py
poolctl/scripts/: get_token.pl
poolctl/support/: common.py  config.py  log.py  misc.py  pveapi.py
