[tool.poetry]
name = "poolctl"
version = "0.1.0"
description = ""
authors = ["sebi364 <110155948+sebi364@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rich-click = "^1.8.3"
rich = "^13.9.4"
logging = "^0.4.9.6"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poolctl = 'poolctl.main:main'
