[tool.poetry]
name = "poolctl"
version = "0.1.2"
description = ""
authors = ["sebi364 <110155948+sebi364@users.noreply.github.com>"]
readme = "README.md"
include = [{ path = "scripts/get_token.pl", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rich-click = "^1.8.3"
rich = "^13.9.4"
toml = "^0.10.2"
pathlib = "^1.0.1"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poolctl = 'poolctl.main:main'
